# kalina_backend

./: .bash_history  .dev.env  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/api/: cabinet.py  common.py
app/auth/: auth.py  header_extract.py  jwt.py
app/core/: settings.py
app/db/: db.py
app/db/repositories/: form_repository.py  revision_repository.py  user_repository.py
app/di/: di.py  di_stubs.py
app/domain/entities/: attachment.py  base.py  form.py  revision.py  user.py
app/domain/interfaces/: admin_token_decoder.py  base_repository.py  cabinet_service.py  form_repository.py  form_service.py  revision_repository.py  revision_service.py  token_auth_decoder.py  token_auth_encoder.py  token_interactor.py  user_repository.py  user_service.py
app/domain/services/: cabinet_service.py  (+3 more)
app/exceptions/: already_taken.py  handlers.py  invalid_code.py  invalid_token.py
app/imports/: __init__.py
app/schemas/: revision.py  task.py  user.py
app/utils/: utils.py
migrations/: env.py
migrations/versions/: 3d2966aa6aa1_.py  e0fd8b06380d_only_one_migration.py
requirements/: base.txt
scripts/: start-dev.sh
src/api/: auth.py  cabinet.py  revision.py  template.py
src/auth/: auth.py  header_extract.py
src/core/: settings.py
src/db/: db.py
src/di/: di.py  di_stubs.py
src/exceptions/: handlers.py
src/imports/: __init__.py
src/schemas/: answer.py  attachment.py  form.py  revision.py  task.py  user.py
src/tests/: conftest.py  test_form_admin.py  test_revision.py
src/utils/: utils.py
(+34 files in other folders)
