[tool.poetry]
name = "templateforhackathon"
version = "0.1.0"
description = ""
authors = ["KaiserProger <kaisergrobe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
SQLAlchemy = "^1.4.42"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
aiohttp = "^3.8.3"
PyJWT = "^2.6.0"
alembic = "^1.8.1"
redis = "^4.3.4"
black = "^22.10.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
flake8 = "^5.0.4"
sqlalchemy2-stubs = "^0.0.2a29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
