[tool.poetry]
name = "templateforhackathon"
version = "0.2.0"
description = ""
authors = ["KaiserProger <kaisergrobe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
SQLAlchemy = "2.0.4"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
aiohttp = "^3.8.3"
PyJWT = "^2.6.0"
alembic = "^1.8.1"
redis = "^4.3.4"
black = "^22.10.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
asyncpg = "^0.27.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
